--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -13,11 +13,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Timestamp
         run: |
-          python3 -c "import json, time; f=open('words.json','r+', encoding='utf-8'); d=json.load(f); d['last_updated']=time.time(); f.seek(0); json.dump(d, f, indent=2, ensure_ascii=False); f.write('\n'); f.truncate()"
+          python3 -c "import json, time; f=open('habedere.json','r+', encoding='utf-8'); d=json.load(f); d['last_updated']=time.time(); f.seek(0); json.dump(d, f, indent=2, ensure_ascii=False); f.write('\n'); f.truncate()"
       - name: Commit and Push
         run: |
           git config user.name "TRMNL Bot"
           git config user.email "actions@github.com"
-          git add words.json
+          git add habedere.json
           # Only commit if changed
           git diff --quiet && git diff --staged --quiet || (git commit -m "Daily refresh" && git push)
